--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="./style.css">
     <script src="./browser.js"></script>
+    <script src="./to-svg-browser.js"></script>
     <script src="./dataset.js"></script>
 </head>
 <body>
@@ -35,6 +36,10 @@
             <input name="downloadCSV" id="downloadCSV" type="checkbox" checked='true' class="score">
         </div>
         <button onclick="batchTest(document.getElementById('against').value,parseInt(document.getElementById('interval').value),parseInt(document.getElementById('value').value),document.getElementById('downloadCSV').checked)" class="estimate">Batch Run</button>
+        <h2>Neural Network Visualization</h2>
+        <div class="svg">
+            <svg  xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" width="600" height="300"><rect x="96" y="26" width="8" height="8" stroke="black" stroke-width="1" fill="rgba(0, 128, 0, 0.5)" /><line x1="50" y1="30" x2="96" y2="30" style="stroke:black;stroke-width:0.5" /><rect x="96" y="86" width="8" height="8" stroke="black" stroke-width="1" fill="rgba(0, 128, 0, 0.5)" /><line x1="50" y1="90" x2="96" y2="90" style="stroke:black;stroke-width:0.5" /><rect x="96" y="146" width="8" height="8" stroke="black" stroke-width="1" fill="rgba(0, 128, 0, 0.5)" /><line x1="50" y1="150" x2="96" y2="150" style="stroke:black;stroke-width:0.5" /><rect x="96" y="206" width="8" height="8" stroke="black" stroke-width="1" fill="rgba(0, 128, 0, 0.5)" /><line x1="50" y1="210" x2="96" y2="210" style="stroke:black;stroke-width:0.5" /><rect x="96" y="266" width="8" height="8" stroke="black" stroke-width="1" fill="rgba(0, 128, 0, 0.5)" /><line x1="50" y1="270" x2="96" y2="270" style="stroke:black;stroke-width:0.5" /><circle cx="300" cy="30" r="4" stroke="black" stroke-width="1" fill="rgba(255, 127, 80, 0.5)" /><line x1="104" y1="30" x2="296" y2="30" style="stroke:black;stroke-width:0.5" /><line x1="104" y1="90" x2="296" y2="30" style="stroke:black;stroke-width:0.5" /><line x1="104" y1="150" x2="296" y2="30" style="stroke:black;stroke-width:0.5" /><line x1="104" y1="210" x2="296" y2="30" style="stroke:black;stroke-width:0.5" /><line x1="104" y1="270" x2="296" y2="30" style="stroke:black;stroke-width:0.5" /><circle cx="300" cy="90" r="4" stroke="black" stroke-width="1" fill="rgba(255, 127, 80, 0.5)" /><line x1="104" y1="30" x2="296" y2="90" style="stroke:black;stroke-width:0.5" /><line x1="104" y1="90" x2="296" y2="90" style="stroke:black;stroke-width:0.5" /><line x1="104" y1="150" x2="296" y2="90" style="stroke:black;stroke-width:0.5" /><line x1="104" y1="210" x2="296" y2="90" style="stroke:black;stroke-width:0.5" /><line x1="104" y1="270" x2="296" y2="90" style="stroke:black;stroke-width:0.5" /><circle cx="300" cy="150" r="4" stroke="black" stroke-width="1" fill="rgba(255, 127, 80, 0.5)" /><line x1="104" y1="30" x2="296" y2="150" style="stroke:black;stroke-width:0.5" /><line x1="104" y1="90" x2="296" y2="150" style="stroke:black;stroke-width:0.5" /><line x1="104" y1="150" x2="296" y2="150" style="stroke:black;stroke-width:0.5" /><line x1="104" y1="210" x2="296" y2="150" style="stroke:black;stroke-width:0.5" /><line x1="104" y1="270" x2="296" y2="150" style="stroke:black;stroke-width:0.5" /><circle cx="300" cy="210" r="4" stroke="black" stroke-width="1" fill="rgba(255, 127, 80, 0.5)" /><line x1="104" y1="30" x2="296" y2="210" style="stroke:black;stroke-width:0.5" /><line x1="104" y1="90" x2="296" y2="210" style="stroke:black;stroke-width:0.5" /><line x1="104" y1="150" x2="296" y2="210" style="stroke:black;stroke-width:0.5" /><line x1="104" y1="210" x2="296" y2="210" style="stroke:black;stroke-width:0.5" /><line x1="104" y1="270" x2="296" y2="210" style="stroke:black;stroke-width:0.5" /><circle cx="300" cy="270" r="4" stroke="black" stroke-width="1" fill="rgba(255, 127, 80, 0.5)" /><line x1="104" y1="30" x2="296" y2="270" style="stroke:black;stroke-width:0.5" /><line x1="104" y1="90" x2="296" y2="270" style="stroke:black;stroke-width:0.5" /><line x1="104" y1="150" x2="296" y2="270" style="stroke:black;stroke-width:0.5" /><line x1="104" y1="210" x2="296" y2="270" style="stroke:black;stroke-width:0.5" /><line x1="104" y1="270" x2="296" y2="270" style="stroke:black;stroke-width:0.5" /><circle cx="500" cy="150" r="4" stroke="black" stroke-width="1" fill="rgba(100, 149, 237, 0.5)" /><line x1="504" y1="150" x2="550" y2="150" style="stroke:black;stroke-width:0.5" /><line x1="304" y1="30" x2="496" y2="150" style="stroke:black;stroke-width:0.5" /><line x1="304" y1="90" x2="496" y2="150" style="stroke:black;stroke-width:0.5" /><line x1="304" y1="150" x2="496" y2="150" style="stroke:black;stroke-width:0.5" /><line x1="304" y1="210" x2="496" y2="150" style="stroke:black;stroke-width:0.5" /><line x1="304" y1="270" x2="496" y2="150" style="stroke:black;stroke-width:0.5" /></svg>
+        </div>
     </div>
 
 
@@ -75,9 +80,11 @@ log('Preparing Config....');
         // provide optional config object (or undefined). Defaults shown.
         const config = {
     binaryThresh: 0.5,
-    hiddenLayers: [3],     // array of ints for the sizes of the hidden layers in the network
+    hiddenLayers: [5],     // array of ints for the sizes of the hidden layers in the network
     activation: 'sigmoid',  // supported activation types: ['sigmoid', 'relu', 'leaky-relu', 'tanh'],
-    leakyReluAlpha: 0.01   // supported for activation type 'leaky-relu'
+    leakyReluAlpha: 0.01,   // supported for activation type 'leaky-relu'
+    inputSize: 5,
+            outputSize: 1,
 };
 log('Config Ready....', true);
 log('Preparing Neural Network....');
