--- a/index.html
+++ b/index.html
@@ -93,8 +93,10 @@ const net = new brain.NeuralNetwork(config);
 log('Neural Network Ready....');
 
 log('Training Neural Network....');
-var training = net.train(trainingData);
-log('Training error: ' + training.error);
+var network = {"sizes":[5,5,1],"layers":[{"0":{},"1":{},"2":{},"3":{},"4":{}},{"0":{"bias":-8.15433120727539,"weights":{"0":1.3286104202270508,"1":4.347071170806885,"2":3.263028144836426,"3":-0.41631877422332764,"4":2.6291747093200684}},"1":{"bias":-2.4866316318511963,"weights":{"0":-0.48715609312057495,"1":-0.2981504201889038,"2":0.9450435638427734,"3":0.32703647017478943,"4":-0.05863186717033386}},"2":{"bias":-0.8089812994003296,"weights":{"0":-2.6712543964385986,"1":3.514768123626709,"2":0.11923981457948685,"3":-1.9279494285583496,"4":-0.5971998572349548}},"3":{"bias":-2.2099549770355225,"weights":{"0":-5.046065330505371,"1":7.502602577209473,"2":1.5617976188659668,"3":-3.051419973373413,"4":-0.44095686078071594}},"4":{"bias":-2.03273868560791,"weights":{"0":-0.49851149320602417,"1":-0.3807869851589203,"2":0.5855063199996948,"3":-0.30084580183029175,"4":0.06035099923610687}}},{"0":{"bias":0.11697370558977127,"weights":{"0":3.157305955886841,"1":0.6870763301849365,"2":-1.7665326595306396,"3":-4.727635860443115,"4":0.5264731645584106}}}],"outputLookup":false,"inputLookup":false,"activation":"sigmoid","trainOpts":{"iterations":20000,"errorThresh":0.005,"log":false,"logPeriod":10,"learningRate":0.3,"momentum":0.1,"callbackPeriod":10,"beta1":0.9,"beta2":0.999,"epsilon":1e-8}};
+net.fromJSON(network);
+//var training = net.train(trainingData, {iterations: 20000});
+//log('Training error: ' + training.error);
 log('Trained and Ready...', true);
 var result;
 function estimate(){
